--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ console.log('This runs in your terminal, not the browser!');
      some magic sprinkled in to help you build great templates. -->
 <html>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>I'm in branch b</h1>
   </body>
 </html>
 <style>
